# cpp_boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cpp_boilerplate/: CMakeLists.txt
include/project_name/: .clang-format
libraries/my_maths/sources/: CMakeLists.txt
source/: CMakeLists.txt
sources/: CMakeLists.txt
sources/code/: main.cpp  private_header.hpp
sources/code/cpp_boilerplate/: main.cpp
tests/: CMakeLists.txt
